# flowy-servers

./: LICENSE  README.md
appengine/: README.md  app.yaml  go.mod  main.go  main_test.go
rocket/: .dockerignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
rocket/src/: main.rs
