[package]
name = "dev"
version = "0.1.0"
authors = ["Suyash <suyash93@protonmail.com>"]

[dependencies]
redis = "0.9.1"
rocket = "0.3.17"
rocket_codegen = "0.3.17"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

[dependencies.rocket_contrib]
version = "0.3.17"
default-features = false
features = ["json"]
