[package]
name = "dev"
version = "0.1.0"
authors = ["Suyash <suyash93@protonmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.0"
redis = "0.9.1"
serde = "1.0.82"
serde_json = "1.0.33"
serde_derive = "1.0.82"

[dependencies.rocket_contrib]
version = "0.4.0"
default-features = false
features = ["json"]
